--- a/esri-mapbox/package.json
+++ b/esri-mapbox/package.json
@@ -16,8 +16,8 @@
     "agsout": "^1.0.3",
     "aws-sdk": "^2.188.0",
     "dotenv": "^4.0.0",
+    "glob": "^7.1.2",
     "mapbox": "^1.0.0-beta9",
-    "request": "^2.83.0",
     "shelljs": "^0.8.1"
   }
 }
